--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <label for="quantity">Prefix:</label><input type="text" id="Prefix" value="Exam  topic 1 question ">
     <form>
         <label for="quantity">From</label>
-        <input type="number" id="from" min="1" max="10" onchange="fromFun(this.value)">
+        <input type="number" id="from" min="1" max="99999" >
         <label for="quantity">to</label>
-        <input type="number" id="to"  min="2" max="9999" onchange="toFun(this.value)">
+        <input type="number" id="to"  min="2" max="99999" >
     </form>
     <label for="quantity">Suffix:</label><input type="text"id="Suffix" value=" discussion site:https://www.examtopics.com/discussions/">
     <button onclick="list()">click</button>
